# tree_sitter_sparql

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
bindings/python/: binding.c
src/: grammar.json  node-types.json  parser.c
